feat: require pantry id when pantry item is created from shopping list item
